--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -61,8 +61,7 @@
           silhouettes. Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into
           classic silhouettes. Forward-thinking fine jewelry essentials for individuals of all genders that breathe new
           life into classic silhouettes. Forward-thinking fine jewelry essentials for individuals of all genders that
-          breathe new life into classic silhouettes. Forward-thinking fine jewelry essentials for individuals of all
-          genders classic silhouettes.</p>
+          breathe new life into classic silhouettes.</p>
       </div>
     </div>
   </div>
@@ -73,15 +72,14 @@
   <div class="row our-mission">
     <div class="our-mission-text col-5">
       <h4 class="mb-3">Our Mission</h4>
-      <p class="smt">Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into classic
-        silhouettes. Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into
-        classic silhouettes. Forward-thinking fine jewelry essentials for individuals of all genders that breathe new
-        life into classic silhouettes. Forward-thinking fine jewelry essentials for individuals of all genders that
-        breathe new life into classic silhouettes. Forward-thinking fine jewelry essentials for individuals of all
-        genders classic silhouettes.</p>
+      <p class="smt">SHW is crafting the next generation of heirloom pieces. Each one is designed to transition seamlessly
+        from one wearer to the next and complement each individual’s style in a unique way. Designed and produced in New
+        York City and LA, Aguri the brand of "Pascal Imitation Jewellery" - one of the leading manufacturers and suppliers
+        of Precious, Semi precious and Artificial Jewelry</p>
     </div>
     <div class="col-7">
       <img src="./assets/img/about-us/4.png" />
     </div>
   </div>
 </div>
+
