--- a/src/app/pages/guide/guide.component.html
+++ b/src/app/pages/guide/guide.component.html
@@ -90,7 +90,7 @@
             <div class="row">
               <div class="col-6 diamond-granding">
                 <h6 class="text-center mb-4">DIAMOND CARAT GRADING</h6>
-                <p>Diamond carat (ct) refers to a diamond’s weight. The most common and popular diamonds in the jewelry
+                <p class="mb-3">Diamond carat (ct) refers to a diamond’s weight. The most common and popular diamonds in the jewelry
                   industry range up to 1 carat. Prices increase exponentially as the diamond's weight increases, as larger
                   diamond crystals over 1 carat are more difficult to find.</p>
                 <p>Diamond cutters today use advanced technology to achieve the best proportions, ensuring that each diamond
@@ -106,23 +106,23 @@
                 <div class="line mb-3"></div>
                 <div class="carat-table-inner row">
                   <div class="col text-center">
-                    <p>0.25CT</p>
+                    <p class="decor-text">0.25CT</p>
                     <p class="smt">4mm</p>
                   </div>
                   <div class="col text-center">
-                    <p>0.25CT</p>
+                    <p class="decor-text">0.25CT</p>
                     <p class="smt">4mm</p>
                   </div>
                   <div class="col text-center">
-                    <p>0.25CT</p>
+                    <p class="decor-text">0.25CT</p>
                     <p class="smt">4mm</p>
                   </div>
                   <div class="col text-center">
-                    <p>0.25CT</p>
+                    <p class="decor-text">0.25CT</p>
                     <p class="smt">4mm</p>
                   </div>
                   <div class="col text-center">
-                    <p>0.25CT</p>
+                    <p class="decor-text">0.25CT</p>
                     <p class="smt">4mm</p>
                   </div>
                 </div>
@@ -131,7 +131,7 @@
                 <div class="row">
                   <div class="col-3"></div>
                   <div class="col-6">
-                    <button class="btn btn-sec">Contact Us</button>
+                    <button class="btn btn-pri w-100">Contact Us</button>
                   </div>
                   <div class="col-3"></div>
                 </div>
@@ -151,7 +151,7 @@
             <div class="row">
               <div class="col-6 color-left">
                 <h6 class="text-center mb-4">DIAMOND COLOR GRADING</h6>
-                <p>Gemological institutes grade white diamonds based on the absence of color. Though diamonds are primarily
+                <p class="mb-3">Gemological institutes grade white diamonds based on the absence of color. Though diamonds are primarily
                   carbon, they often include trace elements that can affect their color. The most common trace element is
                   nitrogen, which gives off a subtle shade of yellow. The richer the yellow hue, the more common the diamond crystal, which decreases their value.</p>
                 <p>To grade white diamond color, gemological institutes use letters of the alphabet, starting from D
@@ -173,20 +173,46 @@
           <h5 class="text-center">Jewellery Clarity</h5>
         </a>
         <div class="collapse multi-collapse" id="caratcollapse4">
-          <div class="card card-body">
-            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+          <div class="card card-body my-5 px-0 py-0">
+            <div class="row">
+              <div class="col-6 color-left">
+                <h6 class="text-center mb-4">DIAMOND COLOR GRADING</h6>
+                <p class="mb-3">From formation of the crystal to cutting and polishing, diamonds undergo a long journey, leaving an
+                  individual mark on each stone. The diamond’s internal markings are called inclusions, while surface
+                  irregularities are called blemishes. Together, they’re called clarity characteristics. Gemologists grade diamond clarity based on the absence of inclusions and blemishes. After thorough examination, they prescribe a rating from flawless (no inclusions or blemishes) to included (some clarity characteristics will be visible even with the naked eye).  </p>
+                <p>The fewer inclusions and blemishes the diamond has, the more valuable it is considered to be. Nonetheless,
+                  clarity characteristics are like a natural diamond's 'birth marks' and are extraordinary gemological
+                  manifestations of its formation.</p>
+              </div>
+              <div class="col-6">
+                <img src="./assets/img/guide/clarity.png"/>
+              </div>
+            </div>
           </div>
         </div>
       </div>
       <div class="line my-3"></div>
       <!--Jewellery Shape-->
       <div class="clarity-collapse">
-        <a data-bs-toggle="collapse" href="#caratcollapse4" role="button" aria-expanded="false" aria-controls="caratcollapse4">
+        <a data-bs-toggle="collapse" href="#caratcollapse5" role="button" aria-expanded="false" aria-controls="caratcollapse5">
           <h5 class="text-center">Jewellery Shape</h5>
         </a>
-        <div class="collapse multi-collapse" id="caratcollapse4">
+        <div class="collapse multi-collapse" id="caratcollapse5">
           <div class="card card-body">
-            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+            <div class="row">
+              <div class="col-6 color-left">
+                <h6 class="text-center mb-4">DIAMOND COLOR GRADING</h6>
+                <p class="mb-3">Gemological laboratories study a modern diamond’s cut based on how its facets interact with light,
+                  prescribing an excellent, very good, good, fair, or poor grade. Excellent and very good sparkle the most.
+                  Since this C determines the overall appearance of the modern day brilliant cut diamond, we consider it
+                  to be one of the most important. We recommend only selecting diamonds with an 'excellent' grading.</p>
+                <p>The modern round brilliant cut diamond has 57 facets, or sometimes 58 if the cutter included a culet,
+                  which is an additional facet at the bottom of the pavilion. Today, diamonds are cut with a precision up
+                  to 1/100th of a millimeter allowing the perfect balance of proportions to reveal a diamond's beauty.</p>
+              </div>
+              <div class="col-6">
+                <img src="./assets/img/guide/shape.png"/>
+              </div>
           </div>
         </div>
       </div>
