--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -35,7 +35,7 @@
       </div>
       <div class="col-4 contact-text">
         <span class="mdt">Let’s connect</span>
-        <p>For questions regarding our products and services you can also contact us by filling out the form below.</p>
+        <p class="smt">For questions regarding our products and services you can also contact us by filling out the form below.</p>
       </div>
       <div class="col"></div>
     </div>
