--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -244,9 +244,9 @@
                     Quick view
                   </div>
                 </div>
-                <div class="item-inf text-center mt-3">
-                  <p class="mdt mb-2">Lynn Ring</p>
-                  <p>$7,000</p>
+                <div class="item-inf text-center mt-2">
+                  <p class="mdt mb-1">Lynn Ring</p>
+                  <p class="smt">$7,000</p>
                 </div>
               </div>
             </div>
@@ -262,9 +262,9 @@
                     Quick view
                   </div>
                 </div>
-                <div class="item-inf text-center mt-3">
-                  <p class="mdt mb-2">Lynn Ring</p>
-                  <p>$7,000</p>
+                <div class="item-inf text-center mt-2">
+                  <p class="mdt mb-1">Lynn Ring</p>
+                  <p class="smt">$7,000</p>
                 </div>
               </div>
             </div>
@@ -280,9 +280,9 @@
                     Quick view
                   </div>
                 </div>
-                <div class="item-inf text-center mt-3">
-                  <p class="mdt mb-2">Lynn Ring</p>
-                  <p>$7,000</p>
+                <div class="item-inf text-center mt-2">
+                  <p class="mdt mb-1">Lynn Ring</p>
+                  <p class="smt">$7,000</p>
                 </div>
               </div>
             </div>
@@ -298,9 +298,9 @@
                     Quick view
                   </div>
                 </div>
-                <div class="item-inf text-center mt-3">
-                  <p class="mdt mb-2">Lynn Ring</p>
-                  <p>$7,000</p>
+                <div class="item-inf text-center mt-2">
+                  <p class="mdt mb-1">Lynn Ring</p>
+                  <p class="smt">$7,000</p>
                 </div>
               </div>
             </div>
@@ -320,9 +320,9 @@
                     Quick view
                   </div>
                 </div>
-                <div class="item-inf text-center mt-3">
-                  <p class="mdt mb-2">Lynn Ring</p>
-                  <p>$7,000</p>
+                <div class="item-inf text-center mt-2">
+                  <p class="mdt mb-1">Lynn Ring</p>
+                  <p class="smt">$7,000</p>
                 </div>
               </div>
             </div>
@@ -338,9 +338,9 @@
                     Quick view
                   </div>
                 </div>
-                <div class="item-inf text-center mt-3">
-                  <p class="mdt mb-2">Lynn Ring</p>
-                  <p>$7,000</p>
+                <div class="item-inf text-center mt-2">
+                  <p class="mdt mb-1">Lynn Ring</p>
+                  <p class="smt">$7,000</p>
                 </div>
               </div>
             </div>
@@ -356,9 +356,9 @@
                     Quick view
                   </div>
                 </div>
-                <div class="item-inf text-center mt-3">
-                  <p class="mdt mb-2">Lynn Ring</p>
-                  <p>$7,000</p>
+                <div class="item-inf text-center mt-2">
+                  <p class="mdt mb-1">Lynn Ring</p>
+                  <p class="smt">$7,000</p>
                 </div>
               </div>
             </div>
@@ -374,9 +374,9 @@
                     Quick view
                   </div>
                 </div>
-                <div class="item-inf text-center mt-3">
-                  <p class="mdt mb-2">Lynn Ring</p>
-                  <p>$7,000</p>
+                <div class="item-inf text-center mt-2">
+                  <p class="mdt mb-1">Lynn Ring</p>
+                  <p class="smt">$7,000</p>
                 </div>
               </div>
             </div>
@@ -396,9 +396,9 @@
                     Quick view
                   </div>
                 </div>
-                <div class="item-inf text-center mt-3">
-                  <p class="mdt mb-2">Lynn Ring</p>
-                  <p>$7,000</p>
+                <div class="item-inf text-center mt-2">
+                  <p class="mdt mb-1">Lynn Ring</p>
+                  <p class="smt">$7,000</p>
                 </div>
               </div>
             </div>
@@ -414,9 +414,9 @@
                     Quick view
                   </div>
                 </div>
-                <div class="item-inf text-center mt-3">
-                  <p class="mdt mb-2">Lynn Ring</p>
-                  <p>$7,000</p>
+                <div class="item-inf text-center mt-2">
+                  <p class="mdt mb-1">Lynn Ring</p>
+                  <p class="smt">$7,000</p>
                 </div>
               </div>
             </div>
@@ -432,9 +432,9 @@
                     Quick view
                   </div>
                 </div>
-                <div class="item-inf text-center mt-3">
-                  <p class="mdt mb-2">Lynn Ring</p>
-                  <p>$7,000</p>
+                <div class="item-inf text-center mt-2">
+                  <p class="mdt mb-1">Lynn Ring</p>
+                  <p class="smt">$7,000</p>
                 </div>
               </div>
             </div>
@@ -450,9 +450,9 @@
                     Quick view
                   </div>
                 </div>
-                <div class="item-inf text-center mt-3">
-                  <p class="mdt mb-2">Lynn Ring</p>
-                  <p>$7,000</p>
+                <div class="item-inf text-center mt-2">
+                  <p class="mdt mb-1">Lynn Ring</p>
+                  <p class="smt">$7,000</p>
                 </div>
               </div>
             </div>
