--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -527,9 +527,9 @@
                   Quick view
                 </div>
               </div>
-              <div class="item-inf text-center mt-3">
-                <p class="mdt mb-2">Lynn Ring</p>
-                <p>$7,000</p>
+              <div class="item-inf text-center mt-2">
+                <p class="mdt mb-1">Lynn Ring</p>
+                <p class="smt">$7,000</p>
               </div>
             </div>
           </div>
@@ -545,9 +545,9 @@
                   Quick view
                 </div>
               </div>
-              <div class="item-inf text-center mt-3">
-                <p class="mdt mb-2">Lynn Ring</p>
-                <p>$7,000</p>
+              <div class="item-inf text-center mt-2">
+                <p class="mdt mb-1">Lynn Ring</p>
+                <p class="smt">$7,000</p>
               </div>
             </div>
           </div>
@@ -563,9 +563,9 @@
                   Quick view
                 </div>
               </div>
-              <div class="item-inf text-center mt-3">
-                <p class="mdt mb-2">Lynn Ring</p>
-                <p>$7,000</p>
+              <div class="item-inf text-center mt-2">
+                <p class="mdt mb-1">Lynn Ring</p>
+                <p class="smt">$7,000</p>
               </div>
             </div>
           </div>
@@ -581,9 +581,9 @@
                   Quick view
                 </div>
               </div>
-              <div class="item-inf text-center mt-3">
-                <p class="mdt mb-2">Lynn Ring</p>
-                <p>$7,000</p>
+              <div class="item-inf text-center mt-2">
+                <p class="mdt mb-1">Lynn Ring</p>
+                <p class="smt">$7,000</p>
               </div>
             </div>
           </div>
