--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -533,7 +533,7 @@
 
 
 <!--New collection-->
-<div class=" new-collection mbt-120 container">
+<div class="new-collection mbt-120 container">
     <div class="row">
       <div class="col-5 new-collection-left ps-0">
         <a routerlink="#">
@@ -601,7 +601,7 @@
 <!--Showroom-->
 <div class="container showroom mbt-120">
   <div class="row">
-    <div class="col-4">
+    <div class="col-4 ps-0">
       <h4 class="mb-3">Our Showroom</h4>
       <p class="mdt mb-2">6901 Hollywood Blvd, LA, CA 90028, US</p>
       <p class="mdt">10 Northumberland St, London WC2N 5DB, UK</p>
@@ -612,9 +612,14 @@
         We’re happy to help with in-store or virtual appointments
       </div>
     </div>
-    <div class="col-6">
+    <div class="col-6 pe-0">
       <!--carousel showroom-->
       <div id="carouselshowroom" class="carousel slide carousel-fade" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselshowroom" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselshowroom" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselshowroom" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="2000">
             <img src="./assets/img/home/showroom1.png"/>
@@ -631,6 +636,62 @@
   </div>
 </div>
 <!--GET INSPIRATION-->
+<div class="inspiration mbt-120">
+  <h4 class="mb-2 text-center">Get Inspiration</h4>
+  <p class="smt mb-5 text-center">Tag us on your insta to get a chance for a feature</p>
+  <div id="inspiration-carousel" class="carousel slide carousel-fade carousel-dark" data-bs-ride="carousel">
+    <div class="carousel-inner container">
+      <div class="carousel-item active" data-bs-interval="2000">
+        <div class="row">
+          <div class="col-3 px-0">
+            <img src="./assets/img/home/follow1.png"/>
+          </div>
+          <div class="col-3 px-0">
+            <img src="./assets/img/home/follow2.png"/>
+          </div>
+          <div class="col-3 px-0">
+            <img src="./assets/img/home/follow3.png"/>
+          </div>
+          <div class="col-3 px-0">
+            <img src="./assets/img/home/follow4.png"/>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item" data-bs-interval="2000">
+        <div class="row">
+          <div class="col-3 px-0">
+            <img src="./assets/img/home/follow5.png"/>
+          </div>
+          <div class="col-3 px-0">
+            <img src="./assets/img/home/follow6.png"/>
+          </div>
+          <div class="col-3 px-0">
+            <img src="./assets/img/home/follow7.png"/>
+          </div>
+          <div class="col-3 px-0">
+            <img src="./assets/img/home/follow8.png"/>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item" data-bs-interval="2000">
+        <div class="row">
+          <div class="col-3 px-0">
+            <img src="./assets/img/home/follow9.png"/>
+          </div>
+          <div class="col-3 px-0">
+            <img src="./assets/img/home/follow10.png"/>
+          </div>
+          <div class="col-3 px-0">
+            <img src="./assets/img/home/follow11.png"/>
+          </div>
+          <div class="col-3 px-0">
+            <img src="./assets/img/home/follow12.png"/>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
