--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--HEADER-->
+<script src="app.component.ts"></script>
 <header>
   <div class="header card-header border-0 container">
     <div class="row header-inner">
@@ -37,7 +38,7 @@
 </header>
 
 <!--NAVBAR-->
-<nav>
+<nav id="navb">
   <div class="container border-0">
     <ul class="nav justify-content-center">
       <li class="nav-item"><a class="nav-link" routerLink="/">Home</a></li>
