--- a/src/app/pages/guide/guide.component.html
+++ b/src/app/pages/guide/guide.component.html
@@ -44,18 +44,17 @@
       </div>
     </div>
     <!--natural-jewellery-->
-    <div class="row mbt-120">
-      <div class="col-7 natural-j-img">
+    <div class="row mbt-120 natural-j">
+      <div class="col-7 ps-0 natural-j-img">
         <img src="./assets/img/guide/3.png"/>
       </div>
-      <div class="col-5 content">
-        <div class="content-inner natural-d">
-          <h4>Natural Jewellery</h4>
+      <div class="col-7 pe-0 natural-j-content">
+        <div class="natural-d natural-inner">
+          <h4>About Natural Jewellery</h4>
           <p class="mdt my-3">How Earth-Created Jewelry Are Formed</p>
           <p class="mb-2 smt">Diamonds are crystalline carbon atoms that formed under the earth’s surface over 3 billion years ago. To be
             more exact, they formed in the earth’s mantle about 90 miles below the surface under temperatures as high as
-            2000° F and a pressure of 45-60 kilobars. These extreme conditions link the diamond's atoms together in a
-            special way, creating the hardest substance on earth.</p>
+            2000° F and a pressure of 45-60 kilobars.</p>
           <p class="smt">After their formations, diamonds reach the earth’s surface during extremely rare and not yet observed
             deep-source volcanic eruptions. Diamond is the only gemstone composed of a single element, as they are
             typically about 99.95% carbon. The other 0.05% can include one or more trace elements, which are atoms that
@@ -71,7 +70,7 @@
       <div class="col"></div>
       <div class="col-10 text-center">
         <h4 class="mb-3">Diamond Characteristics and the 4 Cs</h4>
-        <p>Once the lab-grown or earth-created diamond is selected, the next step is to choose the quality of the diamond
+        <p class="smt">Once the lab-grown or earth-created diamond is selected, the next step is to choose the quality of the diamond
           and the shape of its cut. Both types of diamonds are graded by gemological institutes following exactly the same
           process and are cut using exactly the same standards. To help guide your process, you can learn about diamond
           grading and certification, the 4 C’s, diamond shapes, and more, below.</p>
