--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -221,7 +221,7 @@
           <label>Re-type password</label>
           <input class="inpu" type="text" required>
         </div>
-        <button type="submit" class="btn btn-pri my-4" data-bs-dismiss="modal">Sign up</button>
+        <button type="submit" class="btn btn-pri my-4 w-100" data-bs-dismiss="modal">Sign up</button>
         <div class="d-flex sign-in-content w-100">
           <div class="signin-inner">
             <span class="smt">Already have an account? <a class="sign-in smt" data-bs-toggle="modal" type="button" data-bs-target="#signin">Sign in</a></span>
