--- a/src/app/pages/home-AN-TEST/home-AN.component.html
+++ b/src/app/pages/home-AN-TEST/home-AN.component.html
@@ -3,7 +3,7 @@
   <img id="no-2" src="../../../assets/img/home/39cfa61261a1d318e1bbe72ada8e6dcb 21.png">
   <img id="no-3" src="../../../assets/img/home/39cfa61261a1d318e1bbe72ada8e6dcb 22.png">
   <h2 id="tittle">Minimal Collection</h2>
-  <i id="click" class="fa-solid fa-circle-arrow-right fa-4x" onclick = "nextSlide()"></i>
+  <i id="click" class="fa-solid fa-circle-arrow-right fa-4x" onclick = "slide()"></i>
   <img id="no-4" src="../../../assets/img/home/39cfa61261a1d318e1bbe72ada8e6dcb 23.png">
 </div>
 
