--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,8 +50,8 @@
             <div class="col-3">
               <ul>
                 <li class="category"><a routerLink="/shop-all/category">Rings</a></li>
-                <li><a [routerLink]="['/shop-all/category/sub-category', 1]">Eternity</a></li>
-                <li><a [routerLink]="['/shop-all/category/sub-category', 2]">Cocktail</a></li>
+                <li><a [routerLink]="['/sub-category', 1]">Eternity</a></li>
+                <li><a [routerLink]="['sub-category', 2]">Cocktail</a></li>
                 <li><a routerLink="#">Wedding</a></li>
               </ul>
             </div>
