--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--HEADER-->
+<link rel="stylesheet" href="app.component.css">
 <script src="app.component.ts"></script>
 <header>
   <div class="header card-header border-0 container">
@@ -38,7 +39,7 @@
 </header>
 
 <!--NAVBAR-->
-<nav id="navb">
+<nav>
   <div class="container border-0">
     <ul class="nav justify-content-center">
       <li class="nav-item"><a class="nav-link" routerLink="/">Home</a></li>
