--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -16,6 +16,7 @@
   padding-bottom:60px;
 }
 
+
 /*New Collection*/
 .new-collection-bottom{
   display:flex;
@@ -34,6 +35,7 @@
   padding-top:80px;
   padding-bottom:80px;
 }
+/*Banner*/
 #no-1{
   width: 295px;
   height: 391px;
@@ -63,15 +65,8 @@
 }
 #tittle{
   position: absolute;
-  width: 492px;
-  height: 69px;
+
   left: 1190px;
-  top: 680px;
-  font-family: 'Merchant';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 46px;
-  line-height: 69px;
   color: #000000;
   transform: rotate(90deg);
 }
@@ -82,11 +77,6 @@
 #descrip{
   width: 785px;
   height: 192px;
-  font-family: 'Merchant';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 64px;
-  line-height: 96px;
   color: #000000;
   margin-top: 60px;
   margin-left: 163px;
@@ -100,8 +90,6 @@
 
   /* Small text */
 
-  font-family: 'Inter';
-  font-style: normal;
   font-weight: 400;
   font-size: 12px;
   line-height: 18px;
