--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -539,19 +539,19 @@
         <i class="fa-regular fa-truck fa-2x"></i>
         <p class="mdt mb-0 my-3">Complimentary Shipping & Returns</p>
         <p class="smt">We offer complimentary shipping and returns on all AGURI’s order</p>
-        <a routerLink="#">Learn more <i class="fa-regular fa-arrow-right"></i></a>
+        <a class="decor-text" routerLink="#">Learn more <i class="fa-regular fa-arrow-right"></i></a>
       </div>
       <div class="col-4 text-center">
         <i class="fa-regular fa-calendar fa-2x"></i>
         <p class="mdt mb-0 my-3">Complimentary Shipping & Returns</p>
         <p class="smt">We offer complimentary shipping and returns on all AGURI’s order</p>
-        <a routerLink="#">Book now <i class="fa-regular fa-arrow-right"></i></a>
+        <a class="decor-text" routerLink="#">Book now <i class="fa-regular fa-arrow-right"></i></a>
       </div>
       <div class="col-4 text-center pe-0">
         <i class="fa-regular fa-gift fa-2x"></i>
         <p class="mdt mb-0 my-3">Complimentary Shipping & Returns</p>
         <p class="smt">We offer complimentary shipping and returns on all AGURI’s order</p>
-        <a routerLink="#">Explore gift <i class="fa-regular fa-arrow-right"></i></a>
+        <a class="decor-text" routerLink="#">Explore gift <i class="fa-regular fa-arrow-right"></i></a>
       </div>
     </div>
   </div>
@@ -561,8 +561,9 @@
   <div class="row">
     <div class="col-4 ps-0">
         <h4 class="mb-3">Our Showroom</h4>
-        <p class="mdt mb-2">6901 Hollywood Blvd, LA, CA 90028, US</p>
-        <p class="mdt">10 Northumberland St, London WC2N 5DB, UK</p>
+        <p class=" mb-1">6901 Hollywood Blvd, LA, CA 90028, US</p>
+        <p class="">10 Northumberland St, London WC2N 5DB, UK</p>
+        <p class="smt mt-3">Email info @AGURI&PIJ2022.com for appointment</p>
       </div>
     <div class="col-2 showroom bottom-content">
       <div class="bottom-content-inner">
