--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -17,8 +17,8 @@
   <div class="simi-prod mbt-120">
     <div class="row">
       <div class="col-3">
-        <h5>New Arrivals</h5>
-        <p class="smt">AGURI designs reinvent our iconic AGURI collection with bold profiles and powerful details.</p>
+        <h5 class="mt-5">New Arrivals</h5>
+        <p class="smt mt-2">AGURI designs reinvent our iconic AGURI collection with bold profiles and powerful details.</p>
       </div>
       <div class="col-3">
         <div class="card-prd">
@@ -506,15 +506,19 @@
       <div class="col"></div>
       <div class="col-6 new-collection-right pe-0">
         <div class="row new-collection-top">
-          <div class="col-6 feature-img2 ps-0">
-            <a routerlink="#">
-              <img src="./assets/img/home/feature2.png">
-            </a>
+          <div class="col-6 feature-img2 ps-0 new-collection-img">
+            <div class="collection-img">
+              <a routerlink="#">
+                <img src="./assets/img/home/feature2.png">
+              </a>
+            </div>
           </div>
-          <div class="col-6 pe-0">
-            <a routerlink="#">
-              <img src="./assets/img/home/feature3.png">
-            </a>
+          <div class="col-6 pe-0 new-collection-img">
+            <div class="collection-img">
+              <a routerlink="#">
+                <img src="./assets/img/home/feature3.png">
+              </a>
+            </div>
           </div>
         </div>
         <div class="new-collection-bottom">
@@ -533,25 +537,31 @@
 <!--Users Experiences-->
 <div class="experiences mbt-120">
   <div class="container">
-    <h4 class="text-center mbt">The Aguri Experience</h4>
+    <h4 class="text-center mb-5">The Aguri Experience</h4>
     <div class="row">
       <div class="col-4 text-center ps-0">
-        <i class="fa-regular fa-truck fa-2x"></i>
-        <p class="mdt mb-0 my-3">Complimentary Shipping & Returns</p>
-        <p class="smt">We offer complimentary shipping and returns on all AGURI’s order</p>
-        <a class="decor-text" routerLink="#">Learn more <i class="fa-regular fa-arrow-right"></i></a>
+        <div class="px-4">
+          <i class="fa-regular fa-truck fa-2x"></i>
+          <p class="mdt mb-0 mt-3 mb-2">Complimentary Shipping & Returns</p>
+          <p class="smt">We offer complimentary shipping and returns on all AGURI’s order</p>
+          <a class="decor-text" routerLink="#">Learn more <i class="fa-regular fa-arrow-right"></i></a>
+        </div>
       </div>
       <div class="col-4 text-center">
-        <i class="fa-regular fa-calendar fa-2x"></i>
-        <p class="mdt mb-0 my-3">Complimentary Shipping & Returns</p>
-        <p class="smt">We offer complimentary shipping and returns on all AGURI’s order</p>
-        <a class="decor-text" routerLink="#">Book now <i class="fa-regular fa-arrow-right"></i></a>
+        <div class="px-4">
+          <i class="fa-regular fa-calendar fa-2x"></i>
+          <p class="mdt mb-0 mt-3 mb-2">Complimentary Shipping & Returns</p>
+          <p class="smt">We offer complimentary shipping and returns on all AGURI’s order</p>
+          <a class="decor-text" routerLink="#">Book now <i class="fa-regular fa-arrow-right"></i></a>
+        </div>
       </div>
       <div class="col-4 text-center pe-0">
-        <i class="fa-regular fa-gift fa-2x"></i>
-        <p class="mdt mb-0 my-3">Complimentary Shipping & Returns</p>
-        <p class="smt">We offer complimentary shipping and returns on all AGURI’s order</p>
-        <a class="decor-text" routerLink="#">Explore gift <i class="fa-regular fa-arrow-right"></i></a>
+        <div class="px-4">
+          <i class="fa-regular fa-gift fa-2x"></i>
+          <p class="mdt mb-0 mt-3 mb-2">Complimentary Shipping & Returns</p>
+          <p class="smt">We offer complimentary shipping and returns on all AGURI’s order</p>
+          <a class="decor-text" routerLink="#">Explore gift <i class="fa-regular fa-arrow-right"></i></a>
+        </div>
       </div>
     </div>
   </div>
