--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -8,15 +8,12 @@
   color:#fff;
   text-decoration: underline;
 }
-
 /*Best seller*/
 .best-seller{
   background-color: #fff;
   padding-top:60px;
   padding-bottom:60px;
 }
-
-
 /*New Collection*/
 .new-collection-bottom{
   display:flex;
@@ -29,12 +26,18 @@
 .feature-img2 img{
   padding-top:210px;
 }
+.new-collection-img:hover > .collection-img{
+  transform:scale(105%);
+  filter:brightness(90%);
+  transition:0.4s all;
+}
 /*experiences*/
 .experiences{
   background-color: #fff;
   padding-top:80px;
   padding-bottom:80px;
 }
+
 /*Banner*/
 #no-1{
   width: 295px;
