--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,5 +1,29 @@
 /*New Arrivals*/
+.new-arrivals{
+  padding-top:100px;
+}
+/*Showcase*/
 
+.showcase-content{
+  position: relative;
+}
+.showcase-main-img{
+  position: absolute;
+  right:0px;
+}
+.showcase-title{
+  padding-top:60px;
+  margin-bottom:45px;
+}
+.showcase-img{
+  position:relative;
+}
+.decor-showcase-slide{
+  position: absolute;
+  left:160px;
+  top:63%;
+
+}
 /*All jewellery*/
 .item-box-content a{
   color:#fff;
@@ -38,81 +62,7 @@
   padding-bottom:80px;
 }
 
-/*Banner*/
-#no-1{
-  width: 295px;
-  height: 391px;
-  margin-top: 231px;
-}
-#no-2{
-  width: 295px;
-  height: 391px;
-  margin-top: 231px;
-  margin-left: 30px;
-}
-#no-3{
-  width: 620px;
-  height: 820px;
-  margin-top: 57px;
-  margin-left: 193px;
-  margin-bottom: 120px;
-}
-#no-4{
-  width: 295px;
-  height: 391px;
-  margin-left: 135.33px;
-  margin-top: 231px;
-}
-#click{
-  margin: 385.33px 135.33px 528.33px 136.33px;
-}
-#tittle{
-  position: absolute;
 
-  left: 1190px;
-  color: #000000;
-  transform: rotate(90deg);
-}
-#mySlider{
-  transition: 1s;
-  display: flex;
-}
-#descrip{
-  width: 785px;
-  height: 192px;
-  color: #000000;
-  margin-top: 60px;
-  margin-left: 163px;
-}
-#small-text{
-  position: absolute;
-  width: 461px;
-  height: 54px;
-  left: 163px;
-  top: 536px;
-
-  /* Small text */
-
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 18px;
-  /* or 150% */
-
-  display: flex;
-  align-items: flex-end;
-
-  /* Primary color */
-
-  color: #000000;
-
-
-}
-
-
-
-
-
-/*Showroom*/
 
 
 
