--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,58 +1,240 @@
-<link rel="stylesheet" href="home.component.css"><h3 id="descrip">The Coolest Collection Of AGURI Brand</h3>
-<div id="mySlider">
-  <p id="small-text">Tempus, tristique morbi scelerisque sed. Diam nec ut sed est sit in tortor. Blandit consequat
-    quisque vitae ornare diam netus tellus. Tempus, tristique morbi scelerisque sed.</p>
-  <img id="no-1" src="../../../assets/img/home/39cfa61261a1d318e1bbe72ada8e6dcb 2.png">
-  <img id="no-2" src="../../../assets/img/home/39cfa61261a1d318e1bbe72ada8e6dcb 21.png">
-  <img id="no-3" src="../../../assets/img/home/39cfa61261a1d318e1bbe72ada8e6dcb 22.png">
-  <h2 id="tittle">Minimal Collection</h2>
-  <i id="click" class="fa-solid fa-circle-arrow-right fa-4x" onclick = "slide()"></i>
-  <img id="no-4" src="../../../assets/img/home/39cfa61261a1d318e1bbe72ada8e6dcb 23.png">
+<!--Showcase-->
+<div class="container aguri-showcase mbt-120">
+  <div class="row">
+    <div class="col-6 showcase-main-img row">
+      <div id="carousel-main" class="carousel slide carousel-fade carousel-dark" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="2000">
+            <div class="col-10 showcase-img">
+              <a routerlink="#">
+                <img src="./assets/img/home/showcase-b1.png">
+              </a>
+            </div>
+            <div class="decor-showcase-slide">
+              <a routerLink="#"><h6>View Detail</h6></a>
+            </div>
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <div class="col-10 showcase-img">
+              <a routerlink="#">
+                <img src="./assets/img/home/showcase-b2.png">
+              </a>
+            </div>
+            <div class="decor-showcase-slide">
+              <a routerLink="#"><h6>View Detail</h6></a>
+            </div>
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <div class="col-10 showcase-img">
+              <a routerlink="#">
+                <img src="./assets/img/home/showcase-b3.png">
+              </a>
+            </div>
+            <div class="decor-showcase-slide">
+              <a routerLink="#"><h6>View Detail</h6></a>
+            </div>
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <div class="col-10 showcase-img">
+              <a routerlink="#">
+                <img src="./assets/img/home/showcase-b4.png">
+              </a>
+            </div>
+            <div class="decor-showcase-slide">
+              <a routerLink="#"><h6>View Detail</h6></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-8 ps-0 showcase-content">
+      <div class="showcase-title row">
+        <div class="col-8">
+          <p class="decor-text mb-2">AGURI'S COLLECTION</p>
+          <h5 class="mb-3">All Our Beautiful Collection</h5>
+          <p class="smt">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Rhoncus laoreet turpis dignissim condimentum. Lorem
+            ipsum dolor sit amet, consectetur adipiscing elit.
+          </p>
+        </div>
+        <div class="col-2"></div>
+      </div>
+      <!--carousel-showcase-small-img-->
+      <div id="carousel-sub" class="carousel-dark carousel slide carousel-fade" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="2000">
+            <div class="row">
+              <div class="col-4">
+                <a routerlink="#">
+                  <img src="./assets/img/home/showcase-s1.png">
+                </a>
+              </div>
+              <div class="col-4">
+                <a routerlink="#">
+                  <img src="./assets/img/home/showcase-s2.png">
+                </a>
+              </div>
+              <div class="col-4">
+                <a routerlink="#">
+                  <img src="./assets/img/home/showcase-s3.png">
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <div class="row">
+              <div class="col-4">
+                <a routerlink="#">
+                  <img src="./assets/img/home/showcase-s4.png">
+                </a>
+              </div>
+              <div class="col-4">
+                <a routerlink="#">
+                  <img src="./assets/img/home/showcase-s6.png">
+                </a>
+              </div>
+              <div class="col-4">
+                <a routerlink="#">
+                  <img src="./assets/img/home/showcase-s5.png">
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <div class="row">
+              <div class="col-4">
+                <a routerlink="#">
+                  <img src="./assets/img/home/showcase-s3.png">
+                </a>
+              </div>
+              <div class="col-4">
+                <a routerlink="#">
+                  <img src="./assets/img/home/showcase-s4.png">
+                </a>
+              </div>
+              <div class="col-4">
+                <a routerlink="#">
+                  <img src="./assets/img/home/showcase-s6.png">
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <div class="row">
+              <div class="col-4">
+                <a routerlink="#">
+                  <img src="./assets/img/home/showcase-s5.png">
+                </a>
+              </div>
+              <div class="col-4">
+                <a routerlink="#">
+                  <img src="./assets/img/home/showcase-s3.png">
+                </a>
+              </div>
+              <div class="col-4">
+                <a routerlink="#">
+                  <img src="./assets/img/home/showcase-s4.png">
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-
-
 
 <div class="container">
   <!--New Arrivals-->
-  <div class="simi-prod mbt-120">
+  <div class="simi-prod new-arrivals mbt-120">
     <div class="row">
       <div class="col-3">
         <h5 class="mt-5">New Arrivals</h5>
         <p class="smt mt-2">AGURI designs reinvent our iconic AGURI collection with bold profiles and powerful details.</p>
       </div>
-      <div class="col-3">
-        <div class="card-prd">
-          <div class="img">
-            <a href="#">
-              <img src="./assets/img/home/new1.png">
-            </a>
-          </div>
-          <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
-            Compare
-          </div>
-        </div>
-      </div>
-      <div class="col-3">
-        <div class="card-prd">
-          <div class="img">
-            <a href="#">
-              <img src="./assets/img/home/new2.png">
-            </a>
-          </div>
-          <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
-            Compare
-          </div>
-        </div>
-      </div>
-      <div class="col-3">
-        <div class="card-prd">
-          <div class="img">
-            <a href="#">
-              <img src="./assets/img/home/new3.png">
-            </a>
-          </div>
-          <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
-            Compare
+      <div class="col-9">
+        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="4000">
+              <div class="row">
+                <div class="col-4">
+                  <div class="card-prd">
+                    <div class="img">
+                      <a href="#">
+                        <img src="./assets/img/home/new1.png">
+                      </a>
+                    </div>
+                    <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                      Compare
+                    </div>
+                  </div>
+                </div>
+                <div class="col-4">
+                  <div class="card-prd">
+                    <div class="img">
+                      <a href="#">
+                        <img src="./assets/img/home/new2.png">
+                      </a>
+                    </div>
+                    <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                      Compare
+                    </div>
+                  </div>
+                </div>
+                <div class="col-4">
+                  <div class="card-prd">
+                    <div class="img">
+                      <a href="#">
+                        <img src="./assets/img/home/new3.png">
+                      </a>
+                    </div>
+                    <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                      Compare
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="4000">
+              <div class="row">
+                <div class="col-4">
+                  <div class="card-prd">
+                    <div class="img">
+                      <a href="#">
+                        <img src="./assets/img/home/new4.png">
+                      </a>
+                    </div>
+                    <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                      Compare
+                    </div>
+                  </div>
+                </div>
+                <div class="col-4">
+                  <div class="card-prd">
+                    <div class="img">
+                      <a href="#">
+                        <img src="./assets/img/home/new5.png">
+                      </a>
+                    </div>
+                    <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                      Compare
+                    </div>
+                  </div>
+                </div>
+                <div class="col-4">
+                  <div class="card-prd">
+                    <div class="img">
+                      <a href="#">
+                        <img src="./assets/img/home/new6.png">
+                      </a>
+                    </div>
+                    <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                      Compare
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
